--- a/Data Table Site January 2022/style.css
+++ b/Data Table Site January 2022/style.css
@@ -6,7 +6,6 @@ body {
     display: flex;
     flex-direction: column;
     font-family: "Be Vietnam Pro", sans-serif;
-    height: 100vh;
 }
 
 .bannerSection {
@@ -25,8 +24,6 @@ body {
 .container {
     background: linear-gradient(rgb(140, 232, 255), rgb(162, 236, 255));
     border: 1px solid black;
-    height: 80%;
-    width: 80%;
 }
 
 .controls {
@@ -76,4 +73,22 @@ body {
     background: rgb(61, 124, 196);
     color: white;
     text-shadow: 2px 2px 2px rgb(42, 84, 133);
+}
+
+.tableTitle {
+    background: rgb(61, 124, 196);
+    border: 1px solid rgb(42, 84, 133);
+    border-radius: 8px;
+    box-shadow: 0px 0px 3px rgb(5, 5, 5);
+    color: white;
+    font-size: 1.5em;
+    margin: 0.5em auto;
+    padding: .25em 0;
+    text-align: center;
+    text-shadow: 2px 2px 3px rgb(42, 84, 133);
+    width: 70%;
+}
+
+.red {
+    background: red;
 }
