--- a/Data Table Site January 2022/style.css
+++ b/Data Table Site January 2022/style.css
@@ -32,7 +32,7 @@ body {
     border: 1px solid rgb(0, 0, 0);
     border-radius: 7px;
     box-shadow: 0px 0px 4px rgb(42, 84, 133);
-    margin: 0em auto;
+    margin: 0em auto 1em auto;
     padding-bottom: 1em;
     text-align: center;
     width: 60%;
@@ -67,9 +67,10 @@ body {
 }
 
 .submit {
-    background: rgb(47, 151, 87);
-    border: 1px solid rgb(47, 151, 87);
+    background: rgb(42, 134, 77);
+    border: 1px solid rgb(42, 134, 77);
     border-radius: 8px;
+    box-shadow: 0px 0px 4px rgb(42, 84, 133);
     color: white;
     font-size: 1.25em;
     margin-top: 1em;
